--- a/style.sass
+++ b/style.sass
@@ -11,6 +11,8 @@ body
 	transition: all ease 0.3s
 #wrapper
 	overflow-x: hidden
+[v-cloak]
+	display: none
 header
 	position: relative
 	background: url(header.png) no-repeat center center
