--- a/index.pug
+++ b/index.pug
@@ -16,7 +16,7 @@ body
 						p {{ content }}
 					div.header-img
 						img(src="header-img.png", v-bind:alt="headerIMG")
-					a(href="sms:3040;body=TG")
+					a(href="sms:/3040&body=TG")
 						button.btn {{ ctaBtn1 }}
 			section.features
 				.container
