script on body load

--- a/index.pug
+++ b/index.pug
@@ -23,7 +23,7 @@ head
 			}, 200)
 		}
 	title VUE.js for LP
-body
+body(onload="getMobileOperatingSystem()")
 	#app
 		#wrapper(v-cloak)
 			header
