script on body load

--- a/index.pug
+++ b/index.pug
@@ -19,7 +19,7 @@ head
 	script.
 		function success() {
 			setTimeout(function(){
-				window.location = "sms-sent.html";
+				window.location = "sucesso.html";
 			}, 200)
 		}
 	title VUE.js for LP
