added sucesso html

--- a/index.pug
+++ b/index.pug
@@ -33,7 +33,7 @@ body(onload="getMobileOperatingSystem()")
 						p {{ content }}
 					div.header-img
 						img(src="header-img.png", v-bind:alt="headerIMG")
-					a
+					a(href="#")
 						button.btn {{ ctaBtn1 }}
 			section.features
 				.container
